# gsam

./: .gitignore  README.md  config.sh  gsrc.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
ci/publish/: main.sh
gsam/: __main__.py
gsam/core/: aquirer.py  engine.py
gsam/entities/: memory.py  node_stream.py  runtime_node.py  state_store.py
gsam/entities/nodes/: material_node.py  runtime_node.py  syntax_node.py
gsam/executor/: entry.py  runtime.py
gsam/interfaces/: material_strategy.py  node.py  runtime_interface.py
gsam/models/: memory.py  node_stream.py  runtime_node.py  state_store.py  syntax_node.py
gsam/optimizer/: entry.py  pruner.py
gsam/parser/: entry.py  synthesizer.py  tokenizer.py
gsam/portal/: manager.py
gsam/portal/strategies/: python_injection.py
samples/: beer_bottles.gsam  hello.gsam  logs-server.gsam  planned-semantics.gsam  semantics.gsam  sematics.gsam
samples/materials/console/: main.py  material.conf
samples/materials/server/: main.py
tests/: __main__.py
